--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,64 @@
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.wire {
+    width: 10px;
+    height: 90px;
+    background-color: black;
+}
+
+
+.box {
+    width: 125px;
+    height: 300px;
+    background-color: black;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.box2 {
+    width: 125px;
+    height: 400px;
+    background-color: black;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.light {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: red;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.green {
+    background-color: green;
+}
+
+.purple {
+    background-color: purple;
+}
+
+.ambient {
+    box-shadow: 0px 0px 30px 30px white;
+}
 
 /* 
 
